# Holocron-Timeline-Engine

./: .gitignore  README.md
backend/: .env.example  .importlinter  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: errors.py  router.py
backend/app/api/dependencies/: services.py
backend/app/api/routes/: characters.py  engine.py  events.py  factions.py  graph.py  planets.py  search.py  timeline.py
backend/app/core/: config.py  lifespan.py
backend/app/db/: neo4j.py
backend/app/domain/: enums.py  errors.py
backend/app/domain/entities/: __init__.py  causal_graph.py  character.py  event.py  event_impact.py  faction.py  node_reference.py  planet.py  relationship.py  search_result.py  timeline_break_simulation.py  universe_state.py
backend/app/engine/: dto.py  universe_state_catalog.py
backend/app/engine/services/: character_service.py  event_service.py  faction_service.py  planet_service.py  relationship_service.py  search_service.py  temporal_mutation_backfill_service.py  timeline_simulation_service.py  universe_state_service.py
backend/app/ingestion/: __init__.py  cli.py  importer.py  models.py  transformer.py
backend/app/observability/: __init__.py  neo4j.py  request_middleware.py
backend/app/repositories/interfaces/: event_repository.py  (+4 more)
backend/app/schemas/: characters.py  events.py  factions.py  graph.py  planets.py  search.py  universe_state.py
backend/app/scripts/: backfill_temporal_mutations.py  neo4j_uri.py
backend/tests/integration/: conftest.py  test_temporal_mutations_neo4j.py
backend/tests/unit/: test_neo4j_uri.py
(+64 files in other folders)
