[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holocron-backend"
version = "0.1.0"
description = "Holocron Timeline Engine backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx2>=2.4.0",
  "neo4j>=5.22.0,<6.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.0.0,<3.0.0",
  "import-linter>=2.0,<3.0",
  "mypy>=1.10.0,<2.0.0",
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "radon>=6.0.1,<7.0.0",
  "ruff>=0.6.0,<1.0.0",
  "vulture>=2.11,<3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]
